@@ -1,0 +1,8 @@
+require(devtools)
+load_all()
+
+require(testthat)
+test_package("afex")
+
+options(error = recover)
+options(error = NULL)
