@@ -1,0 +1,4 @@
+library(testthat)
+library(afex)
+
+test_package("afex")
